# Raytracer

./: CMakeLists.txt  README.md
include/: box.h  camera.h  color.h  globals.h  intersect.h  light.h  material.h  object.h  ray.h  sphere.h  texture.h
src/: box.cpp  camera.cpp  main.cpp  sphere.cpp  texture.cpp
